--- a/json/pom.xml
+++ b/json/pom.xml
@@ -18,6 +18,7 @@
  
     <dependencies>
         <dependency>
+            <!--  Gson: Java to Json conversion -->
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.9.1</version>
